--- a/index.ipynb
+++ b/index.ipynb
@@ -295,17 +295,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
+    "text_values = [cities[0]['City', cities[1]['City'], \n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "'scatter'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -333,18 +333,20 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          "Buenos Aires"
+         ],
          "type": "scatter",
-         "uid": "f9166b76-e3a8-11e9-8f44-51a3d41d04da"
+         "uid": "2c71eaae-e3a9-11e9-8f44-51a3d41d04da"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"6fbad2dc-c193-4373-ace7-203dd93909bd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6fbad2dc-c193-4373-ace7-203dd93909bd\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"f927f6d4-e3a8-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\", [{\"text\": [\"Buenos Aires\"], \"type\": \"scatter\", \"uid\": \"2c75e546-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"6fbad2dc-c193-4373-ace7-203dd93909bd\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"6fbad2dc-c193-4373-ace7-203dd93909bd\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"f927f6d4-e3a8-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\", [{\"text\": [\"Buenos Aires\"], \"type\": \"scatter\", \"uid\": \"2c75e546-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
