Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,17 +295,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "text_values = [cities[0]['City', cities[1]['City'], \n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "# bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}\n",
+    "text_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +326,7 @@
        "'scatter'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -334,19 +346,21 @@
        "data": [
         {
          "text": [
-          "Buenos Aires"
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
          ],
          "type": "scatter",
-         "uid": "2c71eaae-e3a9-11e9-8f44-51a3d41d04da"
+         "uid": "4c682fe4-e3a9-11e9-8f44-51a3d41d04da"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\", [{\"text\": [\"Buenos Aires\"], \"type\": \"scatter\", \"uid\": \"2c75e546-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a092f27b-14e2-4375-9378-52263479d673\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a092f27b-14e2-4375-9378-52263479d673\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"4c6d1310-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"fefcd8b6-76ad-4f0d-a898-6f59b5844dca\", [{\"text\": [\"Buenos Aires\"], \"type\": \"scatter\", \"uid\": \"2c75e546-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a092f27b-14e2-4375-9378-52263479d673\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a092f27b-14e2-4375-9378-52263479d673\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"4c6d1310-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
