--- a/index.ipynb
+++ b/index.ipynb
@@ -379,8 +379,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': []}"
    ]
   },
   {
