Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -295,11 +295,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "# text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "text_values = x_values\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}\n"
    ]
   },
@@ -375,12 +376,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': []}"
    ]
   },
   {
