--- a/index.ipynb
+++ b/index.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -334,22 +334,32 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [
-          "Buenos Aires",
-          "Toronto",
-          "Pyeongchang"
-         ],
+         "text": [],
          "type": "scatter",
-         "uid": "6f52ff98-e3a9-11e9-8f44-51a3d41d04da"
+         "uid": "04b1e040-e3aa-11e9-8f44-51a3d41d04da",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"e4d03a5b-fab6-47ea-91c6-5ec02181eca3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e4d03a5b-fab6-47ea-91c6-5ec02181eca3\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"6f58c162-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"87329d8f-d75e-4df7-97d2-9884fba69fd6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"87329d8f-d75e-4df7-97d2-9884fba69fd6\", [{\"text\": [], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"04c50e04-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"e4d03a5b-fab6-47ea-91c6-5ec02181eca3\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e4d03a5b-fab6-47ea-91c6-5ec02181eca3\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"type\": \"scatter\", \"uid\": \"6f58c162-e3a9-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"87329d8f-d75e-4df7-97d2-9884fba69fd6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"87329d8f-d75e-4df7-97d2-9884fba69fd6\", [{\"text\": [], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"04c50e04-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -380,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': [tex]}\n",
+    "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': [text_values]}\n",
     "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}"
    ]
   },
