Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -386,17 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': [text_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -404,27 +404,49 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
          "type": "scatter",
-         "uid": "cce7f9de-e3a8-11e9-8f44-51a3d41d04da",
-         "x": [],
-         "y": []
+         "uid": "2e0666a0-e3aa-11e9-8f44-51a3d41d04da",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
+         "y": [
+          [
+           2891000,
+           2800000,
+           2581000
+          ]
+         ]
         },
         {
-         "text": [],
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
          "type": "scatter",
-         "uid": "cce7fe70-e3a8-11e9-8f44-51a3d41d04da",
-         "x": [],
+         "uid": "2e066916-e3aa-11e9-8f44-51a3d41d04da",
+         "x": [
+          [
+           "Buenos Aires",
+           "Toronto",
+           "Pyeongchang"
+          ]
+         ],
          "y": []
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"59a73a29-eea7-47bf-9db1-a6fd017d37d4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"59a73a29-eea7-47bf-9db1-a6fd017d37d4\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"ccece4a8-e3a8-11e9-8f44-51a3d41d04da\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"ccece638-e3a8-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0cd39850-0088-46c4-ac46-bd1d57739a30\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0cd39850-0088-46c4-ac46-bd1d57739a30\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"2e0c4142-e3aa-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [], \"type\": \"scatter\", \"uid\": \"2e0c439a-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"59a73a29-eea7-47bf-9db1-a6fd017d37d4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"59a73a29-eea7-47bf-9db1-a6fd017d37d4\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"ccece4a8-e3a8-11e9-8f44-51a3d41d04da\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"ccece638-e3a8-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0cd39850-0088-46c4-ac46-bd1d57739a30\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0cd39850-0088-46c4-ac46-bd1d57739a30\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"2e0c4142-e3aa-11e9-8f44-51a3d41d04da\"}, {\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [], \"type\": \"scatter\", \"uid\": \"2e0c439a-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
