--- a/index.ipynb
+++ b/index.ipynb
@@ -386,12 +386,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'scatter',\n",
+       " 'x': [['Buenos Aires', 'Toronto', 'Pyeongchang']],\n",
+       " 'y': [[2891000, 2800000, 2581000]],\n",
+       " 'text': [['Buenos Aires', 'Toronto', 'Pyeongchang']]}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "area_values = [cities[0]]\n",
     "bar_trace_first_three_areas = {'type': 'scatter', 'x': [text_values], 'y': [], 'text': [text_values]}\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}\n"
+    "bar_trace_first_three_pops = {'type': 'scatter', 'x': [text_values], 'y': [y_values], 'text': [text_values]}"
    ]
   },
   {
