Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "data": [
         {
          "type": "scatter",
-         "uid": "e6176dd4-e3aa-11e9-8f44-51a3d41d04da",
+         "uid": "0cf016a4-e3ab-11e9-8f44-51a3d41d04da",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -254,10 +254,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"5cf804d3-2343-49b2-91c5-8d547f0ae388\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5cf804d3-2343-49b2-91c5-8d547f0ae388\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"e622eed4-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c48675b2-93a9-4376-a05b-2476f8a3383e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c48675b2-93a9-4376-a05b-2476f8a3383e\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"0cfd4fc2-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"5cf804d3-2343-49b2-91c5-8d547f0ae388\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5cf804d3-2343-49b2-91c5-8d547f0ae388\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"e622eed4-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"c48675b2-93a9-4376-a05b-2476f8a3383e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c48675b2-93a9-4376-a05b-2476f8a3383e\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"scatter\", \"uid\": \"0cfd4fc2-e3ab-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -270,7 +270,7 @@
        " 'y': [2891000, 2800000, 2581000]}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -346,9 +346,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
+         "text": [
+          "['Buenos Aires', 'Toronto', 'Pyeongchang']"
+         ],
          "type": "scatter",
-         "uid": "04b1e040-e3aa-11e9-8f44-51a3d41d04da",
+         "uid": "f8e6106e-e3aa-11e9-8f44-51a3d41d04da",
          "x": [
           [
            "Buenos Aires",
@@ -368,18 +370,32 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"87329d8f-d75e-4df7-97d2-9884fba69fd6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"87329d8f-d75e-4df7-97d2-9884fba69fd6\", [{\"text\": [], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"04c50e04-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"f8ec67b6-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"87329d8f-d75e-4df7-97d2-9884fba69fd6\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"87329d8f-d75e-4df7-97d2-9884fba69fd6\", [{\"text\": [], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"04c50e04-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3a71d16e-0848-46f8-a6e9-20d2a8b4d8df\", [{\"text\": [\"['Buenos Aires', 'Toronto', 'Pyeongchang']\"], \"x\": [[\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"]], \"y\": [[2891000, 2800000, 2581000]], \"type\": \"scatter\", \"uid\": \"f8ec67b6-e3aa-11e9-8f44-51a3d41d04da\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'scatter',\n",
+       " 'x': [['Buenos Aires', 'Toronto', 'Pyeongchang']],\n",
+       " 'y': [[2891000, 2800000, 2581000]],\n",
+       " 'text': [['Buenos Aires', 'Toronto', 'Pyeongchang']]}"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "plotly.offline.iplot([bar_trace_first_three_pops])"
+    "plotly.offline.iplot([bar_trace_first_three_pops])\n",
+    "bar_trace_first_three_pops"
    ]
   },
   {
